--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:GlnqoqlbEowuq8mbRLaIrjqusyBPxrbKUn57+GPaduE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://laravel_api_linkedin.local
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mariadb
- DB_HOST=127.0.0.1
- DB_PORT=3306
- DB_DATABASE=laravel_api_linkedin
- DB_USERNAME=root
- DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel_api_linkedin
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
