Recuperar datos queries complejas feat(api): Add functionality to retrieve confirmations for an activity
- Add Confirmacion model import
- Fetch confirmations for a specific activity
- Include user data in the confirmation response
- Update success message to reflect activity retrieval

Issue: master

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_api_linkedin
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=null
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+ONESIGNAL_APP_ID=59042eed-a986-4b15-a4c3-22b1214beb0b
+USER_AUTH_KEY=OTcyOTE5NzAtMzBjYy00NGU5LWE3NmEtNTQxMDQ0NjUzYWE4
+ONESIGNAL_REST_API_KEY=OWQ2ZWYzNDEtZTU5ZS00MTBjLTg5ZDktNDdhOTE5ZWU1MjVh
