--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "berkayk/onesignal-laravel": "^2.1",
+        "ladumor/one-signal": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/pail": "^1.1",
         "laravel/passport": "^12.0",
